# fresco

./: .cvsignore  INSTALL  LICENSE.html  Makefile  Makefile.am  Makefile.in  PACKAGES  README  autobuild.sh  autogen.sh  config.h.in  configure  configure.ac  runtest.sh
Babylon/: Makefile.in  configure.ac
Babylon/config/: Babylon-build-config.in  Babylon-config.in  Babylon.spec.in  local.mk.in  subdirs.mk.in  synopsis.py.in
Babylon/demo/: Bidir.cc  Blocks.cc  Makefile  Makefile.in  Uni_perf.cc  Unicode.cc  UnicodeData.cc  Unistring.cc  dump_blocks.cc  dump_compexclude.cc  dump_ea.cc  dump_lb.cc  dump_props.cc  dump_ucd.cc  normalize.cc  translate.cc
Babylon/include/Babylon/: Babylon.hh  Char.hh  Dictionary.hh  String.hh  WHAT-IS-THIS  config.hh  defs.hh  exceptions.hh  traits.hh  utils.hh  vis_iterator.hh
Babylon/modules/: 0-7F.cc  100-17F.cc  1000-109F.cc  10000-1007F.cc  100000-10FFFD.cc  100000-10FFFF.cc  10080-100FF.cc  10100-1013F.cc  10300-1032F.cc  10330-1034F.cc  10380-1039F.cc  10400-1044F.cc  10450-1047F.cc  10480-104AF.cc  10800-1083F.cc  10A0-10FF.cc  1100-11FF.cc  1200-137F.cc  13A0-13FF.cc  1400-167F.cc  1680-169F.cc  16A0-16FF.cc  1700-171F.cc  1720-173F.cc  1740-175F.cc  1760-177F.cc  1780-17FF.cc  180-24F.cc  1800-18AF.cc  1900-194F.cc  1950-197F.cc  19E0-19FF.cc  1D00-1D7F.cc  1D000-1D0FF.cc  1D100-1D1FF.cc  1D300-1D35F.cc  1D400-1D7FF.cc  1E00-1EFF.cc  1F00-1FFF.cc  2000-206F.cc  (+96 more)
Babylon/src/: .cvsignore  Boundaries.cc  Char.cc  Dictionary.cc  Makefile.in  String.cc  WHAT-IS-THIS  exceptions.cc  traits.cc  utils.cc  vis_iterator.cc
Babylon/test/: Makefile.in  ucd.pl
Babylon/utils/: UnicodePluginGenerator.pl  UnicodePluginGenerator.pm
Babylon/utils/UnicodePluginGenerator/: Bidir.pm  Block.pm  Category.pm  CombClass.pm  CompExclude.pm  Compositions.pm  DecDigitVal.pm  DecompClass.pm  DecompString.pm  Defined.pm  DerivedProps.pm  DigitVal.pm  EAWidth.pm  Linebreak.pm  Lower.pm  Mirror.pm  NumericVal.pm  Prop.pm  Title.pm  Upper.pm
Berlin/: Makefile.in  configure.ac
Berlin/config/: Berlin-build-config.in  Berlin-config.in  Berlin.spec.in  Makefile  aclocal.m4  berlinrc.in  config.hh.in  dist.mk  iconfig.sh  local.mk  local.mk.in  module.mk.in  server.mk  server.mk.in  subdirs.mk.in  synopsis.py.in
Berlin/include/Berlin/: AllocationImpl.hh  Allocator.hh  CAVE.hh  ClientContextImpl.hh  CloneableImpl.hh  CollectorImpl.hh  Color.hh  CommandImpl.hh  Console.hh  ControllerImpl.hh  DamageImpl.hh  Debug.hh  (+69 more)
Berlin/modules/: Makefile.in
Berlin/server/: Makefile  Makefile.in  WHAT-IS-THIS  devices.cc  kits.cc  server.cc
Berlin/share/: pack-unifont.pl
Berlin/src/: .cvsignore  AllocationImpl.cc  Allocator.cc  CAVE.cc  ClientContextImpl.cc  CloneableImpl.cc  CollectorImpl.cc  Console.cc  ControllerImpl.cc  DamageImpl.cc  Debug.cc  DebugGraphic.cc  DefaultPOA.cc  DesktopImpl.cc  DirectFB.cc  DrawTraversalImpl.cc  EventManager.cc  FactoryFinderImpl.cc  FactoryFinder_impl.cc  FilterImpl.cc  FocusImpl.cc  GGI.cc  GLUT.cc  GenericFactoryImpl.cc  GenericFactory_impl.cc  GraphDebugger.cc  GraphicDictionary.cc  GraphicImpl.cc  IdentifiableImpl.cc  KitFactory.cc  KitImpl.cc  Logger.cc  Makefile  Makefile.in  MonoGraphic.cc  NameUtil.cc  NonPositionalFocus.cc  PNG.cc  PickTraversalImpl.cc  Pointer.cc  (+23 more)
Fresco-C++/: Makefile.in  configure.ac
Fresco-C++/config/: .cvsignore  Fresco-C++-build-config.in  Fresco-C++-config.in  Fresco-C++.spec.in  Makefile  Makefile.omniorb.in  Makefile.tao.in  iconfig.sh  local.mk  local.mk.in  subdirs.mk.in  synopsis.py.in  warsaw.mk.in
Fresco-C++/src/: .cvsignore  ClientContextImpl.cc  Fresco.cc  IO.cc  Makefile  Resolve.cc  Unicode.cc
Fresco-IDL/: Makefile.in  configure.ac
Fresco-IDL/config/: Fresco-IDL.spec.in  Makefile  aclocal.m4  dist.mk  manual.css  synopsis.py.in  warsaw.mk
Fresco-Perl-demos/: Makefile.in  configure.ac
Fresco-Perl-demos/config/: Makefile  clients-perl.mk  dist.mk  subdirs.mk.in
Fresco-Perl-demos/src/: Makefile  README  Warsaw.pm  demo.pl  gen-warsaw-idl.pl  get-nameservice-ior.cc  jabber.pl
Fresco-Python/: Makefile.in  configure.ac  setup.py.in
Fresco-Python-demos/: Makefile.in  configure.ac
Fresco-Python-demos/config/: Makefile  Makefile.omniorb.in  aclocal.m4  clients-python.mk  dist.mk  iconfig.sh  local.mk.in  subdirs.mk.in
Fresco-Python-demos/src/: Makefile  Makefile.in  clock  logo  menu  multilogo  primitive  refcount  terminal  transform  unicode  unidraw  viewport
Fresco-Python/config/: Makefile  Makefile.omniorb.in  aclocal.m4  clients-python.mk  clients-python.mk.in  dist.mk  local.mk.in
Fresco-Python/src/: Makefile
Fresco-Test/: Makefile.in  README  configure.ac
Fresco-Test/config/: Fresco-Test-build-config.in  Fresco-Test-config.in  local.mk.in
Fresco-Test/doc/: FAQ.txt
Fresco-Test/qmtest-ext/: classes.qmc  testcmd_runner.py
Fresco-Test/scripts/: Makefile.in  run_tests.sh
Fresco-Test/syunit/: Makefile.in  syn2cc.py
Fresco-Test/syunit-c++/: Makefile.in
GGI/: Makefile.in  configure.ac
GGI/GGIKit/: GGIKit.idl  GGIKitImpl.cc  GGIKitImpl.hh  Makefile  Makefile.in  VisualImpl.cc  VisualImpl.hh  WHAT-IS-THIS  config.hh
GGI/config/: GGI.spec.in  Makefile.omniorb.in  Makefile.tao.in  local.mk.in
GGI/demos/: Makefile.in  ggiwrapper.cc
GGI/src/: Console.cc  Console.hh  Drawable.cc  Drawable.hh  Extension.cc  Extension.hh  GGI.cc  GGIGL.cc  Makefile.in  Pointer.cc  Pointer.hh
Prague/: Makefile.in  configure.ac
Prague/config/: Makefile  Prague-build-config.in  Prague-config.in  Prague.spec.in  aclocal.m4  dist.mk  iconfig.sh  local.mk  local.mk.in  prague.mk  prague.mk.in  subdirs.mk.in  synopsis.py.in
Prague/demo/: DataType.cc  Examples.mk  Makefile  Makefile.in  Regex.cc  Timer.cc  Unicode.cc  Unistring.cc
Prague/src/: .cvsignore  Makefile  Makefile.in  Prague.mk  TODO  WHAT-IS-THIS
SDL/: Makefile.in  configure.ac
SDL/config/: SDL.spec.in  local.mk.in
SDL/src/: Console.cc  Console.hh  Drawable.cc  Drawable.hh  Extension.cc  Extension.hh  Makefile.in  Pointer.cc  Pointer.hh  SDL.cc  SDLGL.cc  SDLGL.hh
contrib/daVinci/: Makefile.in  configure.ac
(+881 files in other folders)
